When create JavaScriptNode, do not ignore NumberOfOutputChannels parameter. https://bugs.webkit.org/show_bug.cgi?id=83250

Patch by Raymond Liu <raymond.liu@intel.com> on 2012-04-09
Reviewed by Chris Rogers.

* Modules/webaudio/AudioContext.cpp:
(WebCore::AudioContext::createJavaScriptNode):
(WebCore):
* Modules/webaudio/AudioContext.h:
(AudioContext):
* Modules/webaudio/AudioContext.idl:
* Modules/webaudio/JavaScriptAudioNode.cpp:
(WebCore::JavaScriptAudioNode::create):
(WebCore):
(WebCore::JavaScriptAudioNode::JavaScriptAudioNode):
(WebCore::JavaScriptAudioNode::initialize):
(WebCore::JavaScriptAudioNode::process):
* Modules/webaudio/JavaScriptAudioNode.h:
(JavaScriptAudioNode):

Canonical link: https://commits.webkit.org/100918@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113600 268f45cc-cd09-0410-ab3c-d52691b4dbfc